hphp/test/zend/bad/ext/session/tests/bug55688.php
<?php
ini_set('session.save_handler', 'files');
$x = new SessionHandler;
$x->gc(1);
?>